--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Nulia"
+name = "Neige"
 uuid = "f65405b2-08c5-4d98-b9d7-9512edf329ff"
 authors = ["Paul <paul@plutojl.org>"]
 version = "0.1.0"
