--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ version = "0.1.0"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Neovim = "b2cf22bb-779f-4885-b12f-54b1c19a73e0"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
